--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,9 +22,10 @@ jobs:
         r-version: ['4.0.2']
 
     steps:
-      - uses: actions/checkout@master
-      - uses: r-lib/actions/setup-r@v1
-      - uses: r-lib/actions/setup-r-dependencies@v1
+      - name: Run tests
+        uses: actions/checkout@master
+        uses: r-lib/actions/setup-r@v1
+        uses: r-lib/actions/setup-r-dependencies@v1
         with:
           cache-version: 2
           extra-packages: |
@@ -33,3 +34,7 @@ jobs:
           needs: |
             website
             coverage
+        run: |
+          library(DetectoR)
+          start_app()
+
