udpate test action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,6 @@ jobs:
           website
           coverage
     - run: |
-        library(sampleRpkg)
+        library("sampleRpkg"")
         start_app()
 
