--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -35,3 +35,7 @@ jobs:
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
         shell: Rscript {0}
+      - name: Run Shiny app
+        run: |
+          library("sampleRpkg")
+          start_app()
